# shorten-urls

./: .bandit.yml  .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Dockerfile.tests  README.md  docker-compose.dev.yaml  docker-compose.yaml  manage.py  pip-licenses-strategy.ini  pyproject.toml  pytest.ini  setup.cfg  wait-for-postgres.sh
.github/workflows/: actions.yaml
e2e/tests/: base_selenium_test.py
e2e/tests/admin/: test_admin_login.py  test_admin_logout.py
e2e/tests/utils/: helpers.py
hseer/: asgi.py  backends.py  settings.py  settings_local.py  urls.py  wsgi.py
hseer/tests/: test_admin_panel_login.py
mainapps/: admin.py  asgi.py  models.py  urls.py  wsgi.py
mainapps/migrations/: 0001_initial.py
mainapps/settings/: base.py  dev.py
nginx/: Dockerfile  demo.shorten.samsulhadi.com.conf  hseer.samsulhadi.com  nginx.conf
requirements/: base.txt  dev.txt
scripts/: createdb.sql  createdbuser.sql  wait-and-setup-for-postgres.sh
shorten_urls/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  viewsets.py
shorten_urls/migrations/: 0001_initial.py
shorten_urls/tests/: conftest.py  test_ceate_shorten_urls_api.py  test_crud_shorten_urls_api.py  test_delete_shorten_urls_api.py  test_get_shorten_urls_api.py  test_update_shorten_urls_api.py  test_viewsets.py
spec/: openapi.yaml
usom/: apps.py  backends.py  models.py  permissions.py  urls.py  views.py
usom/migrations/: 0001_initial.py
usom/tests/: conftest.py  test_admin_panel_login.py  test_login_api.py  test_logout_api.py  test_token_refresh_api.py
(+1 files in other folders)
